--- a/packages/theme-lbx/src/icon.scss
+++ b/packages/theme-lbx/src/icon.scss
@@ -1,33 +1,97 @@
 @font-face {
-    font-family: 'iconfont';
-    src: url('./fonts/iconfont.woff') format('woff'), url('./fonts/iconfont.ttf') format('truetype');
-    font-weight: normal;
-    font-display: auto;
-    font-style: normal;
-  }
-  
-  [class^="lbx-icon-"], [class*=" lbx-icon-"] {
-    font-family: 'iconfont' !important;
-    font-style: normal;
-    font-weight: normal;
-    font-variant: normal;
-    text-transform: none;
-    line-height: 1;
-    vertical-align: baseline;
-    display: inline-block;
-  
-    /* Better Font Rendering =========== */
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale
-  }
-  
-  /**
-   * 示例：
-   * .lbx-icon-iconName:before {
-   *   content: "\unicode 16进制码" 
-   * }
-   * .lbx-icon-add:before {
-   *   content: "\e606"
-   * }
-   */
+  font-family: 'iconfont';
+  src: url('./fonts/iconfont.woff') format('woff'), url('./fonts/iconfont.ttf') format('truetype');
+  font-weight: normal;
+  font-display: auto;
+  font-style: normal;
+}
+
+[class^="lbx-icon-"], [class*=" lbx-icon-"] {
+  font-family: 'iconfont' !important;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  vertical-align: baseline;
+  display: inline-block;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale
+}
+
+.lbx-icon-banquan:before {
+  content: "\e98b";
+}
+
+.lbx-icon-anquanyinsi:before {
+  content: "\e98c";
+}
+
+.lbx-icon-dicengjiagou:before {
+  content: "\e98d";
+}
+
+.lbx-icon-cangchucangku:before {
+  content: "\e98e";
+}
+
+.lbx-icon-bingtutubiao:before {
+  content: "\e98f";
+}
+
+.lbx-icon-chufang:before {
+  content: "\e990";
+}
+
+.lbx-icon-chayan:before {
+  content: "\e991";
+}
+
+.lbx-icon-erweima:before {
+  content: "\e992";
+}
+
+.lbx-icon-fapiao:before {
+  content: "\e993";
+}
+
+.lbx-icon-fenbushi:before {
+  content: "\e994";
+}
+
+.lbx-icon-cunchu:before {
+  content: "\e995";
+}
+
+.lbx-icon-dingdan:before {
+  content: "\e996";
+}
+
+.lbx-icon-fuwuqi:before {
+  content: "\e997";
+}
+
+.lbx-icon-fenzhi:before {
+  content: "\e998";
+}
+
+.lbx-icon-fengfuduoyuan:before {
+  content: "\e999";
+}
+
+.lbx-icon-gongchang:before {
+  content: "\e99a";
+}
+
+.lbx-icon-hetong:before {
+  content: "\e99b";
+}
+
+.lbx-icon-haiguangangkou:before {
+  content: "\e99c";
+}
+
+
   
